# devops-engineer-from-scratch-project-313

./: .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  dev.db  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: crud.py  db.py  main.py  models.py  schemas.py
frontend/: package-lock.json  package.json
scripts/: entrypoint.sh  start.sh
tests/: test_links.py  test_ping.py
